--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:r43WLmR7Mvv/IVdvifHeU34wkIN4N4IVdoc0nAgIAtA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=inventory_management_system
+DB_DATABASE=capstone_inventory
 DB_USERNAME=root
 DB_PASSWORD=
 
