--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "anayarojo/shoppingcart": "^4.2",
         "awobaz/compoships": "^2.2",
+        "doctrine/dbal": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
         "haruncpi/laravel-id-generator": "^1.1",
         "laravel/framework": "^10.8",
@@ -19,13 +20,13 @@
         "phpoffice/phpspreadsheet": "^1.28",
         "picqer/php-barcode-generator": "^2.2",
         "power-components/livewire-powergrid": "^5.1",
-        "rappasoft/laravel-livewire-tables": "^3.1"
+        "rappasoft/laravel-livewire-tables": "^3.1",
+        "kyslik/column-sortable": "^6.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
         "beyondcode/laravel-query-detector": "^1.7",
         "fakerphp/faker": "^1.9.1",
-        "kyslik/column-sortable": "^6.5",
         "laravel/breeze": "^1.20",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
