--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,10 @@
         "php": "^8.1",
         "anayarojo/shoppingcart": "^4.2",
         "awobaz/compoships": "^2.2",
-        "doctrine/dbal": "^3.0",
+        "doctrine/dbal": "^3.10",
         "guzzlehttp/guzzle": "^7.2",
         "haruncpi/laravel-id-generator": "^1.1",
+        "kyslik/column-sortable": "^6.5",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
@@ -20,8 +21,7 @@
         "phpoffice/phpspreadsheet": "^1.28",
         "picqer/php-barcode-generator": "^2.2",
         "power-components/livewire-powergrid": "^5.1",
-        "rappasoft/laravel-livewire-tables": "^3.1",
-        "kyslik/column-sortable": "^6.5"
+        "rappasoft/laravel-livewire-tables": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
