--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devDependencies": {
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.9",
+        "concurrently": "^9.2.1",
         "laravel-vite-plugin": "^1.1.1",
         "postcss": "^8.5.1",
         "vite": "^6.0.9"
