--- a/.env.example.docker
+++ b/.env.example.docker
@@ -1,19 +1,19 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:k1j/xDnZfEAGnMSiX5Xy2lMAo9ZjA3D32o310Wxx8Yg=
+APP_KEY=base64:r43WLmR7Mvv/IVdvifHeU34wkIN4N4IVdoc0nAgIAtA=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=inventory_management_system
+DB_DATABASE=capstone_inventory
 DB_USERNAME=root
-DB_PASSWORD=examplepassword
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
